オリジナル景品を追加出来るように

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -323,6 +323,10 @@
     @apply bg-accent text-white;
   }
 
+  .item-card .badge--status-original {
+    @apply bg-indigo-400 text-indigo-950;
+  }
+
   .item-card .badge--action {
     @apply cursor-pointer hover:border-accent/60;
   }
