--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -252,6 +252,10 @@
     .page-settings-modal .modal-header > div {
       margin-left: 16px;
     }
+
+    .page-settings-modal .modal-header > div > h2 {
+      margin-top: 16px;
+    }
   }
 
   .inventory-history-dialog__rarity-badge {
